<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barak_comms</name>
  <version>0.0.1</version>
  <description>Secure telemetry and encrypted communication layer for BARAK.</description>
  <maintainer email="info@merl.lab">MERL</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>barak_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
